# heapfile

./: .gitignore  CMakeLists.txt  README
examples/: bf_main.c  hp_main.c
include/: bf.h  heap_file.h
src/: heap_file.c
