cmake_minimum_required(VERSION 3.15)
project(heapfile)
set(CMAKE_CXX_STANDARD 99)
include_directories (${PROJECT_SOURCE_DIR}/include)
link_directories(bf ${PROJECT_SOURCE_DIR}/lib)
include_directories ("${PROJECT_SOURCE_DIR}/lib")
set(SOURCE_FILES examples/hp_main.c include/bf.h include/heap_file.h src/heap_file.c)
add_executable(heapfile ${SOURCE_FILES})
add_compile_options(-02)
target_link_libraries (heapfile bf)
